force-app/main/default/objects/Clone_Config__mdt/Clone_Config__mdt.object-meta.xml
<CustomObject>
    <label>Clone Config</label>
    <pluralLabel>Clone Configs</pluralLabel>
</CustomObject>