force-app/main/default/objects/Clone_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description
  >When unchecked, this configuration is ignored and the object falls back to a parent-only clone.</description>
    <inlineHelpText
  >Uncheck to disable deep-clone for this object without deleting the configuration.</inlineHelpText>
</CustomField>