force-app/main/default/objects/Clone_Config__mdt/fields/Child_Excluded_Fields__c.field-meta.xml
<CustomField>
    <fullName>Child_Excluded_Fields__c</fullName>
    <label>Child Excluded Fields</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >Optional JSON map of child relationship name to a list of field API names to exclude, for example: {"Contacts":["Email","Phone"]}.</description>
    <inlineHelpText
  >Optional JSON: {"Contacts":["Email"]} to exclude fields per child relationship.</inlineHelpText>
</CustomField>