force-app/main/default/objects/Clone_Config__mdt/fields/Child_Relationship_Names__c.field-meta.xml
<CustomField>
    <fullName>Child_Relationship_Names__c</fullName>
    <label>Child Relationship Names</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >Comma-separated child relationship API names to clone alongside the parent (for example, Contacts,Cases). Leave blank to clone the parent only.</description>
    <inlineHelpText
  >Comma-separated child relationship names, e.g. Contacts,Cases.</inlineHelpText>
</CustomField>