force-app/main/default/objects/Clone_Config__mdt/fields/Excluded_Fields__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Fields__c</fullName>
    <label>Excluded Fields</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description
  >Comma-separated field API names to skip on the parent when cloning (for example, External_Id__c,Legacy_Key__c).</description>
    <inlineHelpText
  >Comma-separated parent field API names to exclude from the clone.</inlineHelpText>
</CustomField>