force-app/main/default/objects/Clone_Config__mdt/fields/Name_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Name_Prefix__c</fullName>
    <label>Name Prefix</label>
    <type>Text</type>
    <length>80</length>
    <description
  >Optional text prepended to the parent record's Name field on the clone (for example, "Copy of ").</description>
    <inlineHelpText
  >Optional prefix added to the cloned record's name, e.g. "Copy of ".</inlineHelpText>
</CustomField>