force-app/main/default/objects/Clone_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description
  >API name of the parent SObject to enable deep clone for (for example, Account or My_Object__c).</description>
    <inlineHelpText
  >The API name of the object this configuration applies to, e.g. Account.</inlineHelpText>
</CustomField>